MDEV-24442 Assertion space->referenced() failed in fil_crypt_space_needs_rotation

A race condition between deleting an .ibd file and fil_crypt_thread
marking pages dirty was introduced in
commit 118e258aaac5da75a2ac4556201aaea3688fac67 (part of MDEV-23855).

fil_space_t::acquire_if_not_stopped(): Correctly return false
if the STOPPING flag is set, indicating that any further activity
on the tablespace must be avoided. Also, remove the constant parameter
have_mutex=true and move the function declaration to the same
compilation unit with the only callers.

fil_crypt_flush_space(): Remove an unused variable.